cabal-version:      2.4
name:               time-domain
version:            0.1.0.5
license:            MIT
license-file:       LICENSE
author:             Manuel Bärenz
maintainer:         programming@manuelbaerenz.de
synopsis:           A library for time domains and durations
description:        This library mainly provides a type class, 'TimeDomain',
                    which can be used to specify times and durations.
                    There are some instances for standard types from @base@ and @time@.
extra-source-files: CHANGELOG.md
category:           FRP
homepage:           https://github.com/turion/time-domain/

tested-with:
  ghc ==8.8
  ghc ==8.10
  ghc ==9.0
  ghc ==9.2
  ghc ==9.4
  ghc ==9.6
  ghc ==9.8
  ghc ==9.10
  ghc ==9.12

source-repository head
  type:     git
  location: https://github.com/turion/time-domain

library
  exposed-modules:  Data.TimeDomain
  build-depends:
      base >= 4.13.0 && < 4.22
    , time >= 1.12 && < 1.15
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:  -W
  if flag(dev)
    ghc-options: -Werror

flag dev
  description: Enable warnings as errors. Active on ci.
  default: False
  manual: True
